# joshuadavidthomas.com

./: .dockerignore  .editorconfig  .env.example  .eslintrc.js  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .travis.yml  404.html  CNAME  Dockerfile  Gemfile  Justfile  LICENSE  Procfile.dev  README.md  _config.yml  astro.config.mjs  cibuild.sh  compose.yml  cv.md  docker-compose.yml  fly.toml  gatsby-config.js  index.md  litefs.yml  manage.py  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  redirects.json  requirements.dev.txt  requirements.in  requirements.txt  tailwind.config.cjs  tailwind.config.js  tailwind.config.mjs  tsconfig.json  vercel.json  (+1 more)
.cache/redux/: redux.node.state_0  redux.rest.state
.github/: dependabot.yml
.github/workflows/: deploy.yml  test.yml
.just/: django.just  docker.just  python.just
.scripts/: generate_commit_plots.py
_content/posts/: hello-world copy.md
_data/: cv-example.json  cv.json
_includes/: cc-license.html  head.html  header.html  social.html
_includes/cv/: basics.html  education.html  intro.html  skills.html  volunteer.html  work.html
_layouts/: 404.html  blog.html  cv.html  default-cc.html  defaulthome.html  home.html  index.html  post.html
_plugins/: video_embed.rb
_posts/: 2018-03-27-welcome-to-jekyll.markdown
_sass/: josh.scss  main.scss
_sass/partials/: base.scss  cv.scss  index.scss  layout.scss  native-syntax-highlighting.scss  youtube.scss
assets/: main.scss
assets/css/: fonts.css  styles.css
assets/css/syntax-highlights/: dark.css  light.css
assets/json/: criterion.json
blog/: admin.py  apps.py  feeds.py  managers.py  models.py  services.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_entry_slug.py  0003_remove_entry_is_draft_entry_published_at.py  0004_entry_is_draft.py  0005_link.py  0006_tag_description.py  0006_tag_description_alter_tag_name_alter_tag_slug.py  0007_alter_entry_slug_alter_link_slug.py  0008_rename_entry_publishedentry.py  0009_entry.py  0010_alter_publishedentry_summary.py  0011_rename_body_publishedentry_content.py  0013_delete_publishedentry.py  0014_entry_updated_at.py
components/: content.js  content.tsx  footer.js  header.js  layout.js  layout.tsx  social.js  social.tsx
config/: __init__.py  gunicorn.py  navigation.py  settings.py  urls.py
content/: about.md
content/blog.Entry/2024/: debugging-a-no-time-zone-found-error-while-using-the-official-playwright-docker-image.md  how-i-organize-staticfiles-in-my-django-projects.md  new-year-new-website.md  test.md
content/snippets/: healthcheck-log-filter.md
content/snippets/django/: healthcheck-log-filter.mdx
content/talks.Talk/2023/: custom-model-managers-and-querysets.yaml
content/talks.Talk/2024/: an-opinionated-guide-to-modern-django-forms.md
core/: apps.py  date_utils.py  markdown.py  mastodon.py  miniflux.py  models.py  navigation.py  raindrop.py  sentry.py  social.py  steam.py  views.py
core/admin/: __init__.py  apps.py  config.py  sites.py  views.py  widgets.py
core/components/: apps.py
core/redirects/: __init__.py  middleware.py  redirects.py
core/templatetags/: ui.py  urlparse.py
core/yamdl/: LICENSE  apps.py  loader.py  router.py
flyio/: apps.py  db_hook.py  exceptions.py  machines.py  middleware.py
pages/: _app.tsx  _document.js  _document.tsx  index.js  index.tsx
script/: cibuild
src/: config.json  config.ts  env.d.ts
src/components/: BlogTag.astro  DarkModeToggle.tsx  ExtraFooter.astro  ExtraHead.astro  Head.astro  Header.astro  IconEnvelope.astro  IconGitHub.astro  IconLinkedIn.astro  IconMastodon.astro  MenuMobile.tsx  ThemeToggle.tsx  TilListItem.astro  container.tsx  dark-mode-toggle.tsx  date-formatter.tsx  header.js  header.tsx  layout.tsx  mobile-menu.tsx
src/components/icons/: Django.tsx  GitHub.tsx  LinkedIn.tsx  Mastodon.tsx  django.tsx  git.tsx  github.tsx  linkedin.tsx
src/components/post/: body.tsx  header.tsx  preview.tsx  title.tsx
src/joshthomasdev/: __init__.py  navigation.py  settings.py  urls.py  wsgi.py
src/joshthomasdev/blog/: apps.py  feeds.py  managers.py  models.py  services.py
src/joshthomasdev/core/: apps.py  context_processors.py  date_utils.py  markdown.py  views.py
src/joshthomasdev/flyio/: apps.py  machines.py
src/layouts/: BaseLayout.astro  Layout.astro  MarkdownLayout.astro  PageLayout.astro  Snippet.astro
src/lib/: color.ts  ghost.ts  markdown.ts  markdownToHtml.ts  mdx.ts  posts.ts  snippets.ts
src/pages/: _app.tsx  _document.tsx  about.tsx  index.astro  index.js  index.tsx
src/plugins/: defaultLayout.ts
src/styles/: main.css
src/types/: snippet.ts
src/utils/: mdxUtils.ts  typography.js
static/src/: base.css  slides.css  tailwind.css  typography.css  utilities.css  utils.ts
talks/: admin.py  models.py  urls.py  views.py
talks/dcus2024/: urls.py  views.py
talks/templatetags/: talks.py
templates/: _fonts.html  base.html  content.html  index.html
templates/.well-known/: security.txt
templates/admin/: base.html  confirm_2fa.html  setup_2fa.html
templates/blog/: entry.html  index.html  tag.html
templates/debug_toolbar/: base.html
templates/navigation/: social.html
templates/partials/: navigation.html  social.html
templates/talks/: form.html  index.html  talk.html
templates/widgets/: easymde_widget.html  tiptap_widget.html
tests/: conftest.py  test_version.py
tests/blog/: test_services.py
tests/core/: test_date_utils.py
users/: apps.py  managers.py  models.py
users/migrations/: 0001_initial.py  0002_otpdata.py
(+58 files in other folders)
